// AuraGift type for aura_gift table (no id, uses characterId as PK)
export interface AuraGift {
  characterId: number;
  name?: string;
}
