// Players type for players table (uses id as PK)
export interface Player {
  id: number;
  playerName: string;
}
