erDiagram

  PLAYER ||--o{ CHARACTER : has
  CHARACTER ||--o{ ATTRIBUTE : has
  CHARACTER ||--o{ DOMAIN : has
  CHARACTER ||--o{ COMBAT_STATS : has
  CHARACTER ||--o{ NARRATIVE : has
  CHARACTER ||--o{ INVENTORY : owns
  CHARACTER ||--o{ EFFECT : affected_by
  CHARACTER ||--o{ ESSENCE : has
  CHARACTER ||--o{ AURA_GIFT : has

  PLAYER {
    string id
    string playerName
  }

  CHARACTER {
    string id
    string characterName
    string archetype
    string faction
    string race
    int level
    string category
    int epicPoints
    string type
    boolean isNPC
    boolean isVisible
  }

  ATTRIBUTE {
    string characterId FK
    int strength
    int agility
    int willpower
    int luck
    int intelligence
  }

  DOMAIN {
    string characterId FK
    int physical
    int combat
    int social
    int environmental
    int stealth
    int knowledge
    int technical
    int resources
    int demonic
    int aura
  }

  COMBAT_STATS {
    string characterId FK
    int physicalHealth
    int maxPhysicalHealth
    int physicalResistance
    int maxPhysicalResistance
    int mentalHealth
    int maxMentalHealth
    int mentalResistance
    int maxMentalResistance
    int initiative
    int defense
    int attack
    int impact
    int maxDamage
  }

  NARRATIVE {
    string characterId FK
    string physicalDescription
    string externalProfile
    string internalProfile
    string background
    string specialties
  }

  INVENTORY {
    string id
    string characterId FK
    string name
    string description
    int quantity
    string type
  }

  EFFECT {
    string id
    string characterId FK
    string name
    int duration
    string type
    string description
  }

  ESSENCE {
    string characterId FK
    string name
  }

  AURA_GIFT {
    string characterId FK
    string name
  }
